[tool.poetry]
name = "gameassistantcaptureserver"
version = "0.1.0"
description = ""
authors = ["pacificbelt30 <57101176+pacificbelt30@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
pyautogui = "^0.9.54"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
